--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "element-plus": "^2.9.3",
     "markdown-it": "^14.1.0",
     "markdown-it-highlightjs": "^4.2.0",
+    "mysql2": "^3.14.5",
     "nuxt": "^3.13.2",
     "openai": "^4.85.3",
     "pinia": "^2.3.0",
     "sass": "^1.83.4",
+    "sequelize": "^6.37.7",
     "vue": "^3.4.38",
     "vue-router": "^4.5.1"
   },
